--- a/package.json
+++ b/package.json
@@ -18,7 +18,16 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@popperjs/core": "^2.11.6",
+    "@types/angular-ui-bootstrap": "^1.0.1",
+    "@types/bootstrap": "^5.2.6",
+    "@types/mathjs": "^9.4.2",
+    "bootstrap": "^5.2.2",
+    "cytoscape": "^3.23.0",
+    "cytoscape-angular": "^0.8.12",
+    "mathjs": "^11.3.3",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.6.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
